--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "database": "json-server --watch db.json"
+    "database": "json-server --watch --delay=300 --port=3001 db.json",
+    "dev": "concurrently \"npm run start\" \"npm run database\""
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,7 @@
     "@types/md5": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "concurrently": "^8.0.1",
     "eslint": "^8.40.0",
     "eslint-plugin-react": "^7.32.2"
   }
