--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
