--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "@typescript-eslint/parser": "^5.59.5",
     "concurrently": "^8.0.1",
     "eslint": "^8.40.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "tailwindcss": "^3.3.3"
   }
 }
