--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.27",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-dropzone": "^5.1.0",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "country-flag-icons": "^1.5.7",
@@ -18,6 +19,7 @@
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
@@ -56,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "concurrently": "^8.0.1",
+    "css-loader": "^6.8.1",
     "eslint": "^8.40.0",
     "eslint-plugin-react": "^7.32.2",
     "tailwindcss": "^3.3.3"
