--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/mongoose": "^5.11.97",
@@ -34,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^7.4.3",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
